	* macros/contourplot/makelistfiles.C: CollectAndWriteHypoTestResults not in Combination namespace any more
	* macros/contourplot/contourmacros/SUSY_m0_vs_m12_all_withBand_cls.C: Cleanup and common use of HistFitterUser
	* macros/contourplot/makecontourhists.C: Cleanup and demonstrating repeated use in a nicer way

2012-11-02 Max Baak <mbaak@cern.ch>
	M       Utils.cxx
	M       Utils.h
	* Turn on again PlotPdfSumComponents (functions by Alex)

2012-10-25 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Fix a segfault occuring in ConfigMgr.cxx when using an empty region in
	  combination with the theory band. w->var("alpha_SigXSec") could end up
	  being NULL

2012-10-23 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* LinkDef.h now includes all the functions previously in the Combination
	  namespace

2012-10-22 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Now supports direct writing of workspacea
	* HistFitter -X uses the old code path to create XML files by hand
	* Compatibility with ROOT v5.32 now definitely broken
	* removeSystematic() methods can now take SystematicBase objects next to
	  strings with the name 

2012-10-22 Max Baak <mbaak@cern.ch>
	M       configManager.py
	M       sample.py
	M       systematic.py
	* Introduce histoSysOneSideSym

2012-10-19 Max Baak <mbaak@cern.ch>
	* Updates for root 5.34, minor patches to get this to work.
	* Migration to python 2.6.5
	* Otherwise equivalent to HistFitter-00-00-17
	* Tagging as: HistFitter-00-00-18 

2012-10-19 Max Baak <mbaak@cern.ch>
        * Multiple minor bug-fixes for normalized histograms b/n control and signal regions. 
        * Now achieves numerically identical results wrt HF-13 for 0-lepton fit.
        * Introduction of dedicated logger to stream-line output on screen (by Geert-Jan)
        * Tagging: HistFitter-00-00-17
        * This is the last tag supported for root 5.32
        * Official recommendation is to now use this tag instead of: HistFitter-00-00-13 
